# BVS

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bvs.cpp  bvs.h
test/: CMakeLists.txt  gtest.cpp  testy.cpp
